; ModuleID = '/home/carl/AnghaBench/linux/drivers/platform/x86/extr_classmate-laptop.c_cmpc_ipml_remove.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/platform/x86/extr_classmate-laptop.c_cmpc_ipml_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.acpi_device = type { i32 }
%struct.ipml200_dev = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.acpi_device*)* @cmpc_ipml_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cmpc_ipml_remove(%struct.acpi_device* %0) #0 {
  %2 = alloca %struct.acpi_device*, align 8
  %3 = alloca %struct.ipml200_dev*, align 8
  store %struct.acpi_device* %0, %struct.acpi_device** %2, align 8
  %4 = load %struct.acpi_device*, %struct.acpi_device** %2, align 8
  %5 = getelementptr inbounds %struct.acpi_device, %struct.acpi_device* %4, i32 0, i32 0
  %6 = call %struct.ipml200_dev* @dev_get_drvdata(i32* %5)
  store %struct.ipml200_dev* %6, %struct.ipml200_dev** %3, align 8
  %7 = load %struct.ipml200_dev*, %struct.ipml200_dev** %3, align 8
  %8 = getelementptr inbounds %struct.ipml200_dev, %struct.ipml200_dev* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 8
  %10 = call i32 @backlight_device_unregister(i32 %9)
  %11 = load %struct.ipml200_dev*, %struct.ipml200_dev** %3, align 8
  %12 = getelementptr inbounds %struct.ipml200_dev, %struct.ipml200_dev* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %24

15:                                               ; preds = %1
  %16 = load %struct.ipml200_dev*, %struct.ipml200_dev** %3, align 8
  %17 = getelementptr inbounds %struct.ipml200_dev, %struct.ipml200_dev* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = call i32 @rfkill_unregister(i64 %18)
  %20 = load %struct.ipml200_dev*, %struct.ipml200_dev** %3, align 8
  %21 = getelementptr inbounds %struct.ipml200_dev, %struct.ipml200_dev* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = call i32 @rfkill_destroy(i64 %22)
  br label %24

24:                                               ; preds = %15, %1
  %25 = load %struct.ipml200_dev*, %struct.ipml200_dev** %3, align 8
  %26 = call i32 @kfree(%struct.ipml200_dev* %25)
  ret i32 0
}

declare dso_local %struct.ipml200_dev* @dev_get_drvdata(i32*) #1

declare dso_local i32 @backlight_device_unregister(i32) #1

declare dso_local i32 @rfkill_unregister(i64) #1

declare dso_local i32 @rfkill_destroy(i64) #1

declare dso_local i32 @kfree(%struct.ipml200_dev*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
